# cmake-examples

01-basic/A-hello-cmake/: CMakeLists.txt  c.sh
01-basic/B-hello-headers/: CMakeLists.txt  c.sh
01-basic/C-static-library/: CMakeLists.txt  c.sh
01-basic/D-shared-library/: CMakeLists.txt  c.sh
01-basic/E-installing/: CMakeLists.txt  c.sh
01-basic/E-installing/install/etc/: cmake-examples.conf
01-basic/F-build-type/: CMakeLists.txt  c.sh
